# unsuffered

./: CMakeLists.txt  LICENSE  README.md
assets/data/: creatures.json  regions.json
assets/shaders/: corruption.frag  gbuffer.frag  gbuffer.vert  outline.frag  shadow.vert
src/: Engine.cpp  Engine.h  main.cpp
src/audio/: AudioManager.cpp  AudioManager.h
src/core/: EventBus.h  Logger.h  Types.h
src/game/ai/: AI.cpp  AI.h
src/game/battle/: BattleSystem.cpp  BattleSystem.h
src/game/creature/: Creature.cpp  Creature.h
src/game/narrative/: Narrative.cpp  Narrative.h
src/game/world/: World.cpp  World.h
src/platform/: Platform.h
src/rendering/: ModelLoader.cpp  ModelLoader.h  Renderer.cpp  Renderer.h  stb_image.h  stb_image_impl.cpp
src/resource/: AssetManager.cpp  AssetManager.h
src/save/: SaveManager.cpp  SaveManager.h
